--- a/kube-ha/nginx-proxy.service
+++ b/kube-ha/nginx-proxy.service
@@ -7,7 +7,7 @@ After=docker.service
 User=root
 PermissionsStartOnly=true
 ExecStart=/usr/bin/docker run -p 127.0.0.1:8443:6443 \\
-                              -v /etc/nginx:/etc/nginx \\
+                              -v /etc/nginx/kubernetes/:/etc/nginx \\
                               --name nginx-proxy \\
                               --net=host \\
                               --restart=always \\
